--- a/projects/ActionReplay/ActionReplay.css
+++ b/projects/ActionReplay/ActionReplay.css
@@ -100,7 +100,7 @@
 
 /* Instructions */
 #instructions {
-    font-family: SuisseIntl-Light;
+    font-family: AktivGrotesk-Light;
     font-size: 13px;
 }
 
