--- a/projects/Interbeings/interbeings.css
+++ b/projects/Interbeings/interbeings.css
@@ -2,19 +2,31 @@
   width: 100%;
   height: 100%;
   position: fixed;
+  overflow: hidden;
 }
 
 .video {
-  height: 100%;
+/*  height: 100%;*/
   display: block;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
+  overflow: hidden;
+    
 }
 
-
+@media screen and (max-aspect-ratio: 1920/1080) {
+  .video-container > video {
+    height: 100%;
+  }
+}
+@media screen and (min-aspect-ratio: 1920/1080) {
+  .video-container > video {
+    width: 100%;
+  }
+}
 
 .text-over-video {
   position: relative;
