--- a/projects/Interbeings/interbeings.css
+++ b/projects/Interbeings/interbeings.css
@@ -38,6 +38,7 @@
   margin-top: 3%;
   color: white;
   width: 40%;
+  max-width: 500px;
   overflow-y: scroll;
   max-height: 85%;
   text-shadow: 0px 0px 5px #5d5d5d;
@@ -63,21 +64,20 @@
   margin-right: 3%;
   z-index: 2;
 }
+
 .next-track-link {
   position: absolute;
   bottom: 50%;
-  right: 10%;
+  right: 5%;
   z-index: 2;
-  width: 30px;
-  height: 30px;
-  background-color: white;
-  border: 2px black solid;
-  border-radius: 100%;
-}
-.real-link {
   color: white;
-  font-size: 1px;
+  font-family: Adieu-RegularSlanted;
+  font-size: 80px;
+  text-shadow: 0px 0px 5px #5d5d5d;
+  text-align: center;
+  text-decoration:none;
 }
+
 
 .link {
 font-family: Adieu-BoldSlanted;
