--- a/projects/Interbeings/interbeings.css
+++ b/projects/Interbeings/interbeings.css
@@ -60,8 +60,8 @@
   position: absolute;
   bottom: 0;
   right: 0;
-  margin-bottom: 5%;
-  margin-right: 3%;
+  margin-bottom: 80px;
+  margin-right: 80px;
   z-index: 2;
 }
 
